--- a/app/templates/app/template_form.html
+++ b/app/templates/app/template_form.html
@@ -41,31 +41,31 @@
                         <!-- Многострочное поле -->
                         <label for="my_textarea">Расскажи о себе</label>
                         <div class="form-input">
-                            <textarea id="my_textarea" name="my_textarea" rows="10" placeholder="Начни писать здесь" required></textarea>
+                            <textarea id="my_textarea" name="my_textarea" rows="10" placeholder="Начни писать здесь" ></textarea>
                         </div>
-						<label for="my_select">Внесите вашу электронную почту</label>
+						<label for="my_email">Внесите вашу электронную почту</label>
 						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
-							<span><i class="fa fa-id-card"></i></span>
+							<span><i class="fa fa-envelope-open-o"></i></span>
 							<input type="email" id="my_email" name="my_email" placeholder="@dot.com" required>
 						</div>
-						<label for="my_select">Введите пароль</label>
+						<label for="my_password">Введите пароль</label>
 						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
-							<span><i class="fa fa-id-card"></i></span>
-							<input type="password" id="my_password" name="mmy_password" placeholder="qwerty" required>
+							<span><i class="fa fa-key"></i></span>
+							<input type="password" id="my_password" name="my_password" placeholder="qwerty" required>
 						</div>
-						<label for="my_select">Введите дату днюхи</label>
+						<label for="my_bdate">Введите дату днюхи</label>
 						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
-							<span><i class="fa fa-id-card"></i></span>
+							<span><i class="fa fa-calendar-times-o"></i></span>
 							<input type="date" id="my_bdate" name="my_bdate" placeholder="01/01/1500" >
 						</div>
-						<label for="my_select">Введите случайное число</label>
+						<label for="my_number">Введите случайное число</label>
 						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
-							<span><i class="fa fa-id-card"></i></span>
+							<span><i class="fa fa-random"></i></span>
 							<input type="number" id="my_number" name="my_number" placeholder="777" >
 						</div>
-						<label for="my_select">Выберите</label>
+						<label for="my_chek">Выберите</label>
 						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
-							<span><i class="fa fa-id-card"></i></span>
+							<span><i class="fa fa-circle-thin"></i></span>
 							<input type="checkbox" id="my_chek" name="my_chek" placeholder="777" >
 							<option value="begin">Начальные</option>
 
