--- a/app/templates/app/template_form.html
+++ b/app/templates/app/template_form.html
@@ -49,22 +49,22 @@
 							<input type="email" id="my_email" name="my_email" placeholder="@dot.com" required>
 						</div>
 						<label for="my_password">Введите пароль</label>
-						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
+						<div class="form-input">
 							<span><i class="fa fa-key"></i></span>
 							<input type="password" id="my_password" name="my_password" placeholder="qwerty" required>
 						</div>
 						<label for="my_bdate">Введите дату днюхи</label>
-						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
+						<div class="form-input">
 							<span><i class="fa fa-calendar-times-o"></i></span>
 							<input type="date" id="my_bdate" name="my_bdate" placeholder="01/01/1500" >
 						</div>
 						<label for="my_number">Введите случайное число</label>
-						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
+						<div class="form-input">
 							<span><i class="fa fa-random"></i></span>
 							<input type="number" id="my_number" name="my_number" placeholder="777" >
 						</div>
 						<label for="my_chek">Выберите</label>
-						<div class="form-input">  <!-- Блок для оборачивания строки формы -->
+						<div class="form-input">
 							<span><i class="fa fa-circle-thin"></i></span>
 							<input type="checkbox" id="my_chek" name="my_chek" placeholder="777" >
 							<option value="begin">Начальные</option>
